# puk

./: CMakeLists.txt  Header2.h  gam1e.sln  game.cpp  game.vcxproj
SFML-2.5.1/lib/cmake/SFML/: SFMLSharedTargets.cmake
